--- a/.flowconfig
+++ b/.flowconfig
@@ -8,4 +8,4 @@ flow-typed
 
 [options]
 module.system.node.resolve_dirname=.
-module.system.node.resolve_dirname=./src
+module.system.node.resolve_dirname=src
